tests/models/struct/unnamed/usize/fail/validate.rs
use dade::{model, Result};
#[model]
struct TestModel (
   #[field(validate = validate_fn)]
    usize
);
fn main() {}
